--- a/a-propos.html
+++ b/a-propos.html
@@ -1,54 +1,50 @@
-Html
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<title>Ludus mentis – à propos</title>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – à propos</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-<div id="header"></div>
-<main class="container">
-<section class="section card">
-<h1>À propos de Ludus Mentis</h1>
-<p>
-        Ludus Mentis, c’est d’abord une conviction : le jeu vidéo, quand il est bien accompagné, peut devenir un formidable levier d’épanouissement, de rencontres, et d’apprentissage pour les jeunes. <br/><br/>
-        moi-même passionné de jeux vidéo depuis l’enfance, mais aussi conscient des risques liés à une pratique non encadrée, j’ai longtemps cherché un espace où le jeu rime avec bienveillance, développement de compétences et vraie vie sociale. cet espace, je ne l’ai pas trouvé — alors j’ai voulu le créer.
-      </p>
-</section>
-<section class="section card">
-<h2>Pourquoi Ludus Mentis ?</h2>
-<p>
-        beaucoup de parents se sentent dépassés par le numérique : trop d’heures d’écran, des conflits quotidiens, des inquiétudes sur la santé et le repli social. de l’autre côté, les jeunes rêvent de progresser, de se retrouver entre pairs, mais sans forcément vouloir rejoindre une structure “compétitive” ou élitiste.<br/><br/>
-        Ludus Mentis est né pour réconcilier ces mondes : montrer que le jeu vidéo peut être une chance, à condition d’être guidé, partagé, discuté, et ancré dans le réel.
-      </p>
-</section>
-<section class="section card">
-<h2>Mon parcours : entre passion du jeu et engagement éducatif</h2>
-<p>
-  passionné de jeux vidéo depuis toujours, je suis aussi profondément conscient des défis que cette pratique peut poser aux familles. mon parcours m'a convaincu qu'il manquait un maillon essentiel : un lieu qui allie le plaisir de jouer et l'apprentissage de compétences de vie, loin de la pression de la compétition pure.
-</p>
-<p>
-  Ludus Mentis est né de cette vision. bien que le projet soit jeune, il bénéficie déjà du soutien de partenaires clés comme la <strong>Commune de walhain</strong> et la <strong>Fédération belge d’esport</strong>, qui croient en notre approche innovante.
-</p>
-</section>
-<section class="section card">
-<h2>Nos engagements</h2>
-<ul>
-<li>Proposer un cadre où chaque jeune peut apprendre, progresser, s’exprimer — sans pression ni jugement</li>
-<li>Faire du jeu un outil de dialogue entre générations, et non une source de conflit</li>
-<li>Associer parents, familles, et professionnels à chaque étape du parcours</li>
-<li>Ouvrir la porte à une pratique responsable, inclusive, et joyeuse du numérique</li>
-</ul>
-</section>
-<section class="section card">
-<h2>Envie d’en savoir plus ou de rejoindre l’aventure ?</h2>
-<p>
-        contacte-moi sans hésiter, que tu sois parent, jeune, pro de l’éducation, ou simplement curieux.<br/>
-        ensemble, on peut prouver qu’on peut jouer… et grandir !
-      </p>
-</section>
-</main>
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section card">
+      <h1>À propos de Ludus Mentis</h1>
+      <p>Ludus Mentis, c’est d’abord une conviction : le jeu vidéo, quand il est bien accompagné, peut devenir un formidable levier d’épanouissement, de rencontres, et d’apprentissage pour les jeunes. <br><br>
+        moi-même passionné de jeux vidéo depuis l’enfance, mais aussi conscient des risques liés à une pratique non encadrée, j’ai longtemps cherché un espace où le jeu rime avec bienveillance, développement de compétences et vraie vie sociale. cet espace, je ne l’ai pas trouvé — alors j’ai voulu le créer.</p>
+    </section>
+
+    <section class="section card">
+      <h2>Pourquoi Ludus Mentis ?</h2>
+      <p>Beaucoup de parents se sentent dépassés par le numérique : trop d’heures d’écran, des conflits quotidiens, des inquiétudes sur la santé et le repli social. de l’autre côté, les jeunes rêvent de progresser, de se retrouver entre pairs, mais sans forcément vouloir rejoindre une structure “compétitive” ou élitiste.<br><br>
+        Ludus Mentis est né pour réconcilier ces mondes : montrer que le jeu vidéo peut être une chance, à condition d’être guidé, partagé, discuté, et ancré dans le réel.</p>
+    </section>
+
+    <section class="section card">
+      <h2>Mon parcours : entre passion du jeu et engagement éducatif</h2>
+<p>Passionné de jeux vidéo depuis toujours, je suis aussi profondément conscient des défis que cette pratique peut poser aux familles. mon parcours m'a convaincu qu'il manquait un maillon essentiel : un lieu qui allie le plaisir de jouer et l'apprentissage de compétences de vie, loin de la pression de la compétition pure.</p>
+<p>Ludus Mentis est né de cette vision. bien que le projet soit jeune, il bénéficie déjà du soutien de partenaires clés comme la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, qui croient en notre approche innovante.</p>
+    </section>
+
+    <section class="section card">
+      <h2>Nos engagements</h2>
+      <ul>
+        <li>Proposer un cadre où chaque jeune peut apprendre, progresser, s’exprimer — sans pression ni jugement</li>
+        <li>Faire du jeu un outil de dialogue entre générations, et non une source de conflit</li>
+        <li>Associer parents, familles, et professionnels à chaque étape du parcours</li>
+        <li>Ouvrir la porte à une pratique responsable, inclusive, et joyeuse du numérique</li>
+      </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Envie d’en savoir plus ou de rejoindre l’aventure ?</h2>
+      <p>Contacte-moi sans hésiter, que tu sois parent, jeune, pro de l’éducation, ou simplement curieux.<br>
+        ensemble, on peut prouver qu’on peut jouer… et grandir !</p>
+    </section>
+
+  </main>
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 </body>
 </html>
