--- a/enjeux.html
+++ b/enjeux.html
@@ -1,98 +1,87 @@
-Html
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<title>Jeux vidéo : comprendre les enjeux pour mieux agir | Ludus Mentis</title>
-<meta content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui." name="description"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <title>Jeux vidéo : comprendre les enjeux pour mieux agir | Ludus Mentis</title>
+    <meta name="description" content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui.">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-<div id="header"></div>
-<main class="container">
-<section class="section hero">
-<h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
-<p>
-                le jeu vidéo fait partie intégrante du quotidien de nos jeunes. c'est une source de plaisir et de socialisation, mais qui soulève des questions légitimes pour les parents et les éducateurs. chez Ludus Mentis, nous ne voyons pas le jeu comme un problème, mais comme un formidable terrain d'apprentissage, à condition qu'il soit bien accompagné. découvrez notre analyse des grands enjeux et les réponses concrètes que nous y apportons.
-            </p>
-</section>
-<section class="section card">
-<h2>Quelques chiffres pour cadrer le débat</h2>
-<p>Avant d'explorer les enjeux en détail, voici quelques données qui illustrent l'ampleur du phénomène en europe et en belgique :</p>
-<ul>
-<li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo.</li>
-<li><strong>22 % des joueurs</strong> admettent jouer plus de 4 heures d'affilée.</li>
-<li><strong>57 % des adolescents belges (10-17 ans)</strong> dépassent les 2 heures d’écran recommandées le week-end.</li>
-<li><strong>12 % des adolescents européens</strong> sont considérés comme à risque de développer une pratique problématique (gaming disorder) selon l'oms.</li>
-</ul>
-</section>
-<section class="section card">
-<h2>Enjeu n°1 : le juste équilibre entre vie numérique et vie réelle</h2>
-<p>
-<strong>Le contexte :</strong> l'hyperconnexion est une réalité. quand les sessions de jeu s'étirent sur plus de 4 heures d'affilée pour un jeune sur cinq, l'équilibre avec les autres sphères de la vie (école, famille, sport, sommeil) peut être fragilisé.
-            </p>
-<p>
-<strong>Les risques concrets :</strong> une pratique excessive peut entraîner une fatigue visuelle, des troubles du sommeil liés à l'exposition à la lumière bleue, mais aussi une sédentarité accrue. sur le plan scolaire, la concentration peut être affectée, et le temps consacré aux devoirs ou aux activités en famille se réduit.
-            </p>
-<p>
-<strong>La réponse de Ludus Mentis :</strong> nous ne luttons pas contre le temps d'écran, nous apprenons à le qualifier.
+
+    <div id="header"></div>
+
+    <main class="container">
+
+        <section class="section hero">
+            <h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
+            <p>Le jeu vidéo fait partie intégrante du quotidien de nos jeunes. c'est une source de plaisir et de socialisation, mais qui soulève des questions légitimes pour les parents et les éducateurs. chez Ludus Mentis, nous ne voyons pas le jeu comme un problème, mais comme un formidable terrain d'apprentissage, à condition qu'il soit bien accompagné. découvrez notre analyse des grands enjeux et les réponses concrètes que nous y apportons.</p>
+        </section>
+
+        <section class="section card">
+            <h2>Quelques chiffres pour cadrer le débat</h2>
+            <p>Avant d'explorer les enjeux en détail, voici quelques données qui illustrent l'ampleur du phénomène en europe et en belgique :</p>
+            <ul>
+                <li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo.</li>
+                <li><strong>22 % des joueurs</strong> admettent jouer plus de 4 heures d'affilée.</li>
+                <li><strong>57 % des adolescents belges (10-17 ans)</strong> dépassent les 2 heures d’écran recommandées le week-end.</li>
+                <li><strong>12 % des adolescents européens</strong> sont considérés comme à risque de développer une pratique problématique (gaming disorder) selon l'OMS.</li>
+            </ul>
+        </section>
+
+        <section class="section card">
+            <h2>Enjeu n°1 : le juste équilibre entre vie numérique et vie réelle</h2>
+            <p><strong>le contexte :</strong> l'hyperconnexion est une réalité. quand les sessions de jeu s'étirent sur plus de 4 heures d'affilée pour un jeune sur cinq, l'équilibre avec les autres sphères de la vie (école, famille, sport, sommeil) peut être fragilisé.</p>
+            <p><strong>les risques concrets :</strong> une pratique excessive peut entraîner une fatigue visuelle, des troubles du sommeil liés à l'exposition à la lumière bleue, mais aussi une sédentarité accrue. sur le plan scolaire, la concentration peut être affectée, et le temps consacré aux devoirs ou aux activités en famille se réduit.</p>
+            <p><strong>la réponse de Ludus Mentis :</strong> nous ne luttons pas contre le temps d'écran, nous apprenons à le qualifier.
                 <ul>
-<li><strong>Sessions structurées :</strong> nos ateliers ont une durée définie, incluant des moments de jeu, mais aussi des temps d'échange et de pause obligatoires.</li>
-<li><strong>Exergaming et pauses actives :</strong> nous intégrons des activités physiques comme just dance ou ring fit pour montrer que bouger fait aussi partie de la culture du jeu.</li>
-<li><strong>Ateliers de sensibilisation :</strong> nous abordons avec les jeunes les thèmes du sommeil, de la nutrition et de l'importance de l'équilibre des activités, pour qu'ils deviennent acteurs de leur propre bien-être.</li>
-</ul>
-</p>
-</section>
-<section class="section card">
-<h2>Enjeu n°2 : de l'isolement en ligne à la coopération réelle</h2>
-<p>
-<strong>Le contexte :</strong> le jeu en ligne est un espace de socialisation majeur. cependant, les interactions via un casque et un micro, souvent anonymes, peuvent manquer de profondeur et parfois, de bienveillance. le cyberharcèlement est une réalité dans les communautés de joueurs, créant un environnement qui peut être toxique.
-            </p>
-<p>
-<strong>Les risques concrets :</strong> un jeune peut se sentir seul malgré ses nombreux "amis" en ligne, ou au contraire, s'enfermer dans une communauté virtuelle au détriment de ses relations sociales réelles. l'exposition à des comportements agressifs ou à de la triche peut biaiser sa perception des interactions sociales et de la compétition saine.
-            </p>
-<p>
-<strong>La réponse de Ludus Mentis :</strong> nous faisons du jeu un prétexte à la rencontre et à l'apprentissage du vivre-ensemble.
+                    <li><strong>sessions structurées :</strong> nos ateliers ont une durée définie, incluant des moments de jeu, mais aussi des temps d'échange et de pause obligatoires.</li>
+                    <li><strong>exergaming et pauses actives :</strong> nous intégrons des activités physiques comme just dance ou ring fit pour montrer que bouger fait aussi partie de la culture du jeu.</li>
+                    <li><strong>ateliers de sensibilisation :</strong> nous abordons avec les jeunes les thèmes du sommeil, de la nutrition et de l'importance de l'équilibre des activités, pour qu'ils deviennent acteurs de leur propre bien-être.</li>
+                </ul></p>
+        </section>
+
+        <section class="section card">
+            <h2>Enjeu n°2 : de l'isolement en ligne à la coopération réelle</h2>
+            <p><strong>le contexte :</strong> le jeu en ligne est un espace de socialisation majeur. cependant, les interactions via un casque et un micro, souvent anonymes, peuvent manquer de profondeur et parfois, de bienveillance. le cyberharcèlement est une réalité dans les communautés de joueurs, créant un environnement qui peut être toxique.</p>
+            <p><strong>les risques concrets :</strong> un jeune peut se sentir seul malgré ses nombreux "amis" en ligne, ou au contraire, s'enfermer dans une communauté virtuelle au détriment de ses relations sociales réelles. l'exposition à des comportements agressifs ou à de la triche peut biaiser sa perception des interactions sociales et de la compétition saine.</p>
+            <p><strong>la réponse de Ludus Mentis :</strong> nous faisons du jeu un prétexte à la rencontre et à l'apprentissage du vivre-ensemble.
                 <ul>
-<li><strong>Priorité à la coopération :</strong> notre sélection de jeux (overcooked, etc.) impose de communiquer et de s'entraider pour réussir. l'exploit individuel est moins valorisé que la réussite collective.</li>
-<li><strong>Une charte co-construite :</strong> dès le début du cycle, nous élaborons une charte d'éthique avec les jeunes. le respect, l'empathie et le fair-play ne sont pas des options, mais les règles du jeu.</li>
-<li><strong>Débriefings post-partie :</strong> chaque session se termine par un cercle de parole, basé sur le cycle de kolb, pour analyser les stratégies, les réussites, mais aussi les tensions. c'est là qu'on apprend à donner et recevoir un feedback constructif.</li>
-</ul>
-</p>
-</section>
-<section class="section card">
-<h2>Enjeu n°3 : apprendre à gagner, mais surtout à perdre</h2>
-<p>
-<strong>Le contexte :</strong> le jeu vidéo est un formidable vecteur d'émotions : la joie de la victoire, mais aussi la frustration de l'échec, le stress des moments décisifs. mal gérées, ces émotions peuvent mener à des réactions de colère ("ragequit"), à une mauvaise estime de soi, et dans les cas les plus sérieux, à un rapport anxieux ou obsessionnel au jeu, un risque qui concerne jusqu'à 12% des adolescents.
-            </p>
-<p>
-<strong>Les risques concrets :</strong> l'oms a reconnu le "gaming disorder" comme une dépendance comportementale. sans aller jusqu'à cet extrême, une mauvaise gestion émotionnelle peut nuire à l'ambiance de jeu, se transposer dans la vie réelle et créer des conflits familiaux autour de la pratique.
-            </p>
-<p>
-<strong>La réponse de Ludus Mentis :</strong> nous créons un environnement sécurisé pour apprendre à naviguer dans la tempête émotionnelle.
+                    <li><strong>priorité à la coopération :</strong> notre sélection de jeux (overcooked, etc.) impose de communiquer et de s'entraider pour réussir. l'exploit individuel est moins valorisé que la réussite collective.</li>
+                    <li><strong>une charte co-construite :</strong> dès le début du cycle, nous élaborons une charte d'éthique avec les jeunes. le respect, l'empathie et le fair-play ne sont pas des options, mais les règles du jeu.</li>
+                    <li><strong>débriefings post-partie :</strong> chaque session se termine par un cercle de parole, basé sur le cycle de kolb, pour analyser les stratégies, les réussites, mais aussi les tensions. c'est là qu'on apprend à donner et recevoir un feedback constructif.</li>
+                </ul></p>
+        </section>
+
+        <section class="section card">
+            <h2>Enjeu n°3 : apprendre à gagner, mais surtout à perdre</h2>
+            <p><strong>le contexte :</strong> le jeu vidéo est un formidable vecteur d'émotions : la joie de la victoire, mais aussi la frustration de l'échec, le stress des moments décisifs. mal gérées, ces émotions peuvent mener à des réactions de colère ("ragequit"), à une mauvaise estime de soi, et dans les cas les plus sérieux, à un rapport anxieux ou obsessionnel au jeu, un risque qui concerne jusqu'à 12% des adolescents.</p>
+            <p><strong>les risques concrets :</strong> l'oms a reconnu le "gaming disorder" comme une dépendance comportementale. sans aller jusqu'à cet extrême, une mauvaise gestion émotionnelle peut nuire à l'ambiance de jeu, se transposer dans la vie réelle et créer des conflits familiaux autour de la pratique.</p>
+            <p><strong>la réponse de Ludus Mentis :</strong> nous créons un environnement sécurisé pour apprendre à naviguer dans la tempête émotionnelle.
                 <ul>
-<li><strong>Valorisation de l'effort :</strong> nous mettons l'accent sur la persévérance et la stratégie plutôt que sur le résultat brut. un échec analysé est une victoire pour l'avenir.</li>
-<li><strong>Gestion du stress :</strong> des ateliers spécifiques sont dédiés à la gestion du stress, avec des techniques de respiration ou de concentration applicables en jeu comme avant un examen.</li>
-<li><strong>Fair-play et maturité :</strong> l'accès à une future filière plus compétitive est conditionné non pas au niveau de jeu, mais à la démonstration de la maturité, du respect des autres et de la maîtrise de soi.</li>
-</ul>
-</p>
-</section>
-<section class="section sources card" id="sources">
-<h2>Pour aller plus loin : sources principales</h2>
-<ol>
-<li id="source1">European commission – digital economy and society index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" rel="noopener" target="_blank">Lien</a></li>
-<li id="source2">World health organization, « teens and screens » report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" rel="noopener" target="_blank">Lien</a></li>
-<li id="source3">Sciensano, enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" rel="noopener" target="_blank">Lien</a></li>
-<li id="source4">World health organization, icd‑11 – gaming disorder, 2019 &amp; oms europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" rel="noopener" target="_blank">Lien</a></li>
-<li id="source5">L’écho, « le marché belge du jeu vidéo a bondi de 12 % », juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" rel="noopener" target="_blank">Lien</a></li>
-<li id="source6">Systematic review, europe, « video games and visual fatigue in youth », pmc, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" rel="noopener" target="_blank">Lien</a></li>
-<li id="source7">« gaming‑related musculoskeletal disorders in adolescents », plos one, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" rel="noopener" target="_blank">Lien</a></li>
-<li id="source8">« screen time and sleep in adolescents », pubmed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" rel="noopener" target="_blank">Lien</a></li>
-<li id="source9">European parliamentary research service, « cyberbullying among young people », 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" rel="noopener" target="_blank">Lien</a></li>
-<li id="source10">European parliament, « loot boxes in video games and gambling‑like elements », 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" rel="noopener" target="_blank">Lien</a></li>
-</ol>
-</section>
-</main>
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+                    <li><strong>valorisation de l'effort :</strong> nous mettons l'accent sur la persévérance et la stratégie plutôt que sur le résultat brut. un échec analysé est une victoire pour l'avenir.</li>
+                    <li><strong>gestion du stress :</strong> des ateliers spécifiques sont dédiés à la gestion du stress, avec des techniques de respiration ou de concentration applicables en jeu comme avant un examen.</li>
+                    <li><strong>fair-play et maturité :</strong> l'accès à une future filière plus compétitive est conditionné non pas au niveau de jeu, mais à la démonstration de la maturité, du respect des autres et de la maîtrise de soi.</li>
+                </ul></p>
+        </section>
+
+        <section class="section sources card" id="sources">
+            <h2>Pour aller plus loin : sources principales</h2>
+            <ol>
+              <li id="source1">European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source2">World Health Organization, « Teens and Screens » report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source3">Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source4">World Health Organization, ICD‑11 – Gaming Disorder, 2019 &amp; OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source5">L’Écho, « Le marché belge du jeu vidéo a bondi de 12 % », juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source6">Systematic review, Europe, « Video Games and Visual Fatigue in Youth », PMC, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source7">« Gaming‑Related Musculoskeletal Disorders in Adolescents », PLOS ONE, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source8">« Screen Time and Sleep in Adolescents », PubMed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source9">European Parliamentary Research Service, « Cyberbullying Among Young People », 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source10">European Parliament, « Loot Boxes in Video Games and Gambling‑Like Elements », 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank" rel="noopener">Lien</a></li>
+            </ol>
+        </section>
+
+    </main>
+    <div id="footer"></div>
+    <script src="assets/js/include.js"></script>
 </body>
 </html>
