--- a/mentions.html
+++ b/mentions.html
@@ -1,36 +1,34 @@
-Html
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<title>Ludus mentis – mentions légales</title>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – mentions légales</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-<div id="header"></div>
-<main class="container">
-<section class="section card">
-<h1>Mentions légales</h1>
-<p>
-        Ludus Mentis – association à but non lucratif (asbl)<br/>
-        siège social : walhain, belgique<br/>
-        email : info@ludusmentis.be<br/>
-        responsable de publication : antoine billard<br/>
-</p>
-</section>
-<section class="section card">
-<h2>Propriété intellectuelle</h2>
-<p>
-        le contenu de ce site (textes, images, logos…) est protégé par le droit d’auteur. toute reproduction est interdite sans accord écrit.
-      </p>
-</section>
-<section class="section card">
-<h2>Cookies et données personnelles</h2>
-<p>
-        aucune donnée personnelle n’est collectée à votre insu. les cookies éventuels servent uniquement au bon fonctionnement du site.
-      </p>
-</section>
-</main>
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section card">
+      <h1>Mentions légales</h1>
+      <p>Ludus Mentis – association à but non lucratif (asbl)<br>
+        siège social : walhain, belgique<br>
+        email : info@ludusmentis.be<br>
+        responsable de publication : antoine billard<br></p>
+    </section>
+
+    <section class="section card">
+      <h2>Propriété intellectuelle</h2>
+      <p>Le contenu de ce site (textes, images, logos…) est protégé par le droit d’auteur. toute reproduction est interdite sans accord écrit.</p>
+    </section>
+
+    <section class="section card">
+      <h2>Cookies et données personnelles</h2>
+      <p>Aucune donnée personnelle n’est collectée à votre insu. les cookies éventuels servent uniquement au bon fonctionnement du site.</p>
+    </section>
+
+  </main>
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 </body>
 </html>
