--- a/index.html
+++ b/index.html
@@ -1,72 +1,67 @@
-Html
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<title>Ludus mentis – accueil</title>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <title>Ludus Mentis – accueil</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-<div id="header"></div>
-<main class="container">
-<section class="section hero">
-<img alt="Logo Ludus Mentis" src="assets/images/Ludus-Mentis-transparent.png" style="max-width:120px; margin-bottom:1em"/>
-<h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
-<p>
-  chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. pour s'épanouir à l'écran, comme dans la vie de tous les jours.
-</p>
+  <div id="header"></div>
+  <main class="container">
+
+  <section class="section hero">
+  <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
+ <h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
+<p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
 </section>
-<section class="section card" id="concept">
-<h2>Des compétences humaines pour le 21<sup>E</sup> siècle</h2>
-<p>
-        notre programme est conçu pour développer les compétences les plus recherchées aujourd’hui : <strong>Collaboration, communication, créativité, et résolution de problèmes</strong>.
-      </p>
-<p>
-        grâce à des ateliers concrets, des jeux coopératifs et des moments d’échange en groupe, nous travaillons toutes ces aptitudes essentielles pour leur avenir.
-      </p>
-</section>
-<section class="section card">
-<h2>Les bénéfices pour votre enfant</h2>
-<ul>
-<li><strong>Communication :</strong> exprimer ses idées clairement et écouter les autres.</li>
-<li><strong>Esprit d’équipe :</strong> travailler ensemble vers un objectif commun.</li>
-<li><strong>Gestion du stress :</strong> rester concentré et calme dans les moments clés.</li>
-<li><strong>Confiance en soi :</strong> valoriser ses talents et oser prendre des initiatives.</li>
-</ul>
-</section>
-<section class="section card" id="stats">
-<h2>Pourquoi un accompagnement est-il essentiel ?</h2>
-<p>
-            si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes :
-        </p>
-<ul>
-<li>
-<strong>Plus d'un tiers des adolescents jouent tous les jours</strong>, parfois au détriment d'autres activités.
+  <section class="section card" id="concept">
+      <h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
+      <p>Notre programme est conçu pour développer les compétences les plus recherchées aujourd’hui&nbsp;: <strong>collaboration, communication, créativité, et résolution de problèmes</strong>.</p>
+      <p>Grâce à des ateliers concrets, des jeux coopératifs et des moments d’échange en groupe, nous travaillons toutes ces aptitudes essentielles pour leur avenir.</p>
+    </section>
+
+    <section class="section card">
+      <h2>Les bénéfices pour votre enfant</h2>
+      <ul>
+        <li><strong>Communication&nbsp;:</strong> Exprimer ses idées clairement et écouter les autres.</li>
+        <li><strong>Esprit d’équipe&nbsp;:</strong> Travailler ensemble vers un objectif commun.</li>
+        <li><strong>Gestion du stress&nbsp;:</strong> Rester concentré et calme dans les moments clés.</li>
+        <li><strong>Confiance en soi&nbsp;:</strong> Valoriser ses talents et oser prendre des initiatives.</li>
+      </ul>
+    </section>
+ 
+      <section class="section card" id="stats">
+      <h2>Pourquoi un accompagnement est-il essentiel&nbsp;?</h2>
+        <p>Si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes&nbsp;:</p>
+      <ul>
+        <li>
+          <strong>Plus d'un tiers des adolescents jouent tous les jours</strong>, parfois au détriment d'autres activités.
         </li>
-<li>
-<strong>12 % des jeunes sont considérés à risque de développer une pratique problématique</strong> (gaming disorder) selon l'oms.
+        <li>
+          <strong>12&nbsp;% des jeunes sont considérés à risque de développer une pratique problématique</strong> (gaming disorder) selon l'OMS.
         </li>
-</ul>
-<p style="margin-top: 1.5em;">
-           notre mission est de transformer ce temps d'écran en une expérience constructive.
-       </p>
-<a class="btn" href="enjeux.html" style="font-size: 1em; padding: 0.8em 1.5em;">Voir les chiffres &amp; sources détaillés</a>
+      </ul>
+       <p style="margin-top: 1.5em;">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
+      <a href="enjeux.html" class="btn" style="font-size: 1em; padding: 0.8em 1.5em;">Voir les chiffres &amp; sources détaillés</a>
+    </section>
+
+
+
+    <section class="section card">
+      <h2>Un projet soutenu localement</h2>
+      <p>Ludus Mentis est une initiative locale soutenue par la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.</p>
+      <a href="academie.html" class="btn">Découvrir notre académie</a>
+    </section>
+
+      <section class="section card" style="text-align:center;">
+  <h2>Des questions ? parlons-en !</h2>
+  <p><a href="faq.html">consultez notre faq</a> ou <a href="contact.html">contactez-nous directement</a>.<br>
+    nous répondons à toutes vos préoccupations de parent.</p>
 </section>
-<section class="section card">
-<h2>Un projet soutenu localement</h2>
-<p>
-        Ludus Mentis est une initiative locale soutenue par la <strong>Commune de walhain</strong> et la <strong>Fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.
-      </p>
-<a class="btn" href="academie.html">Découvrir notre académie</a>
-</section>
-<section class="section card" style="text-align:center;">
-<h2>Des questions ? parlons-en !</h2>
-<p>
-<a href="faq.html">Consultez notre faq</a> ou <a href="contact.html">Contactez-nous directement</a>.<br/>
-    nous répondons à toutes vos préoccupations de parent.
-  </p>
-</section>
-</main>
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+
+
+  </main>
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 </body>
 </html>
